--- a/index.css
+++ b/index.css
@@ -168,6 +168,10 @@ nav {
 
 /* About Me CSS */
 
+.bring-card-con {
+  animation: slidingX 1s both 0.5s;
+}
+
 .card {
   height: 100%;
   width: 100px;
@@ -178,7 +182,17 @@ nav {
   position: relative;
 }
 
-.card > div {
+.card:hover::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  backdrop-filter: blur(4px); /* Blur the background */
+}
+
+.card .card-title {
   font-size: 2rem;
   writing-mode: vertical-lr;
   scale: -1;
@@ -194,8 +208,22 @@ nav {
   background-repeat: no-repeat;
 }
 
-.card:hover > div {
-  color: red;
+.card:hover .card-title {
+  top: 10%;
+  left: 5%;
+  margin-left: 0;
+  writing-mode: horizontal-tb;
+  scale: 1;
+}
+
+.card:hover .card-content {
+  font-size: 1.2rem;
+  position: absolute;
+  top: 20%;
+  padding: 0 20px 0 20px;
+  writing-mode: horizontal-tb;
+  display: block;
+  scale: 1;
 }
 
 /* ........... */
@@ -226,26 +254,42 @@ nav {
   }
   /* About css */
   .card-con {
+    gap: 8px;
     width: 100%;
     flex-wrap: wrap;
     margin-top: 20%;
+    height: 60%;
+    opacity: 0;
+    transform: translateX(-20%);
   }
+
   .card {
-    height: 50%;
+    height: 48%;
     width: 40%;
     border-radius: 50px;
     background-image: var(--imgbg);
-    transform: translateX(-100%);
-    animation: slidingX 1.5s both;
-    opacity: 0;
   }
-  .card > div {
-    font-size: 1.2rem;
+
+  .card:hover,
+  .card:active {
+    pointer-events: none;
+  }
+
+  .card .card-title {
+    font-size: 1.5rem;
     writing-mode: horizontal-tb;
     scale: 1;
     position: absolute;
-    top: 20%;
-    left: 20%;
+    top: 8%;
+    left: 10%;
+  }
+
+  .card .card-content {
+    display: block;
+    font-size: 0.75rem;
+    position: absolute;
+    top: 25%;
+    padding: 0 8px 0 8px;
   }
 }
 
