--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ nav {
   scale: 0 1;
   animation: scroll-watcher linear;
   animation-timeline: scroll();
+  z-index: 100;
 }
 
 @keyframes scroll-watcher {
@@ -223,6 +224,7 @@ nav {
   margin-left: 0;
   writing-mode: horizontal-tb;
   scale: 1;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
 }
 
 .card:hover .card-content {
@@ -233,6 +235,7 @@ nav {
   writing-mode: horizontal-tb;
   display: block;
   scale: 1;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
 }
 
 /* Skills Section CSS */
@@ -322,11 +325,11 @@ nav {
 
   /* common changes */
   .section-title {
-    font-size: 40px;
+    font-size: 40px !important;
   }
 
   .section-sub-title {
-    font-size: 15px;
+    font-size: 15px !important;
   }
 
   /* Nav section css */
@@ -342,7 +345,7 @@ nav {
     display: flex;
     justify-content: start;
     padding-left: 5%;
-    width: 30%;
+    width: 28%;
     font-size: 15px;
     border-right: 1px solid white;
   }
@@ -368,13 +371,25 @@ nav {
     margin-top: 20%;
     height: 60%;
     opacity: 0;
+    row-gap: 45px;
   }
 
   .card {
-    height: 48%;
-    width: 40%;
+    height: 55%;
+    width: 90%;
     border-radius: 50px;
     background-image: var(--imgbg);
+    background-size: cover;
+  }
+
+  .card::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    backdrop-filter: blur(2px); /* Blur the background */
   }
 
   .card:hover,
@@ -383,25 +398,31 @@ nav {
   }
 
   .card .card-title {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     writing-mode: horizontal-tb;
     scale: 1;
     position: absolute;
     top: 8%;
-    left: 10%;
+    left: 0 !important;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
   }
 
   .card .card-content {
     display: block;
-    font-size: 0.75rem;
+    font-size: 0.9rem;
     position: absolute;
-    top: 25%;
+    top: 30%;
     padding: 0 8px 0 8px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
   }
 
   /* skills css mobile */
   #skills {
-    row-gap: 60px;
+    row-gap: 60px !important;
   }
   .skill-con {
     position: relative;
@@ -466,13 +487,25 @@ nav {
     margin-top: 20%;
     height: 60%;
     opacity: 0;
+    row-gap: 45px;
   }
 
   .card {
     height: 48%;
-    width: 40%;
+    width: 90%;
     border-radius: 50px;
     background-image: var(--imgbg);
+    background-size: cover;
+  }
+
+  .card::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    backdrop-filter: blur(2px); /* Blur the background */
   }
 
   .card:hover,
@@ -481,20 +514,27 @@ nav {
   }
 
   .card .card-title {
-    font-size: 1.5rem;
+    font-size: 1rem;
     writing-mode: horizontal-tb;
     scale: 1;
     position: absolute;
     top: 8%;
-    left: 10%;
+    left: 0 !important;
+    font-size: 1.8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
   }
 
   .card .card-content {
     display: block;
-    font-size: 0.75rem;
+    font-size: 1rem;
     position: absolute;
-    top: 25%;
+    top: 30%;
     padding: 0 8px 0 8px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
   }
 
   /* skills css mobile */
