--- a/index.css
+++ b/index.css
@@ -353,12 +353,25 @@ nav {
   /* Adjust styles for larger screens */
 
   /* common changes */
+  body {
+    cursor: none;
+  }
+
+  a,
+  button {
+    cursor: none;
+  }
+
   .section-title {
     font-size: 40px !important;
   }
 
   .section-sub-title {
     font-size: 15px !important;
+  }
+
+  #trailer {
+    display: none;
   }
 
   /* Nav section css */
@@ -493,6 +506,20 @@ nav {
 
 @media (min-width: 501px) and (max-width: 600px) {
   /* Adjust styles for small screens */
+  /* common changes */
+  body {
+    cursor: none;
+  }
+
+  a,
+  button {
+    cursor: none;
+  }
+
+  #trailer {
+    display: none;
+  }
+
   #main {
     padding-bottom: 40%;
   }
