--- a/index.css
+++ b/index.css
@@ -596,9 +596,12 @@ nav {
   }
 
   /* projects css */
+  .project-con {
+    padding-right: 15px;
+  }
   .project-card {
-    height: 600px;
-    width: 350px;
+    height: 530px;
+    width: 340px;
   }
 }
 
