--- a/index.css
+++ b/index.css
@@ -411,10 +411,17 @@ nav {
   font-size: 1.5rem;
 }
 
-.project-tech {
-  height: 18%;
+.project-main-title {
   width: 100%;
-  padding: 25px 10px 0 10px;
+  text-align: center;
+  padding-top: 2%;
+  font-weight: bold;
+}
+
+.project-tech {
+  height: 15%;
+  width: 100%;
+  padding: 8px 10px 0 10px;
 }
 
 .project-tech div:first-child {
