Corrected styles, and added new resume

--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+:root {
+  --cursor-bg: white;
+  --text-color: #333;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -17,7 +22,7 @@ button {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: white;
+  background-color: var(--cursor-bg);
   border-radius: 20px;
   height: 20px;
   width: 20px;
@@ -520,9 +525,6 @@ nav {
     gap: 8px;
     width: 100%;
     flex-wrap: wrap;
-    margin-top: 20%;
-    height: 60%;
-    opacity: 0;
     row-gap: 45px;
   }
 
