--- a/index.css
+++ b/index.css
@@ -199,8 +199,9 @@ nav {
 }
 
 .social-links {
-  width: 10%;
+  width: 15%;
   height: 8%;
+  margin-left: 8px;
 }
 
 /* About Me CSS */
@@ -517,6 +518,7 @@ nav {
   .social-links {
     width: 30%;
     height: 8%;
+    margin-left: 8px;
   }
 
   /* About Section CSS */
@@ -774,6 +776,10 @@ nav {
     position: sticky;
     top: 0;
     z-index: 100;
+  }
+
+  .social-links {
+    width: 30%;
   }
 
   .skill-con {
